# chimera_llama_grpc

./: .gitignore  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker-build.yml  docker-image.yml  docker-publish.yml
chimera_llama_grpc/: __init__.py  cli.py  entrypoint.py  exceptions.py  model_manager.py  service.py  tools.py
chimera_llama_grpc/llama/: __init__.py  generation.py  model.py
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
examples/: example-chat-arpg.py  example-client.py  example-text-complete.py  example_chat_completion.py  example_text_completion.py
tests/: conftest.py  test_chimera_llama_grpc.py  test_model_manager.py
